@startuml class-diagram

' ============================================================
' Enums and types
' ============================================================

enum StickerState {
  NEW
  DAMAGED
}

enum StickerType {
  REGULAR
  SHINY
}

enum UserRole {
  STANDARD
  ADMIN
}

enum OfferState {
  PENDING
  APPROVED
  REJECTED
  CANCELLED
  +canTransitionOfferState(from: OfferState, to: OfferState): boolean
}

enum PostState {
  ACTIVE
  COMPLETED
  CLOSED
  +canTransitionPostState(from: PostState, to: PostState): boolean
}

enum PostType {
  DIRECT_TRADE
  AUCTION
}

enum NotificationType {
  STICKER_AVAILABLE
  AUCTION_ENDING
  OFFER_RECEIVED
  OFFER_ACCEPTED
  OFFER_REJECTED
  RATING_RECEIVED
}

' ============================================================
' Catalog
' ============================================================

class NationalTeam {
  +name: string
}

class Club {
  +name: string
}

class Player {
  +name: string
  +nationalTeam: NationalTeam
  +club: Club
  +image: string
}

class Category {
  +state: StickerState
  +type: StickerType
}

class Sticker {
  +number: number
  +player: Player
  +category: Category
  +description: string
  +isShinySticker(): boolean
  +isNewSticker(): boolean
  +isDamagedSticker(): boolean
  +playsForNationalTeam(teamName: string): boolean
  +playsForClub(clubName: string): boolean
  +matchesState(state: string | undefined): boolean
  +matchesType(type: string | undefined): boolean
  +matchesTeam(teamName: string | undefined): boolean
  +matchesClub(clubName: string | undefined): boolean
  +matchesFilters(filters: { state?: string; type?: string; team?: string; club?: string }): boolean
  +getDisplayName(): string
  
}

' ============================================================
' User and collection
' ============================================================

class User {
  +id: string
  +auth0Sub: string
  +firstName: string
  +lastName: string
  +username: string
  +email: string
  +role: UserRole
  +reputation: number
  +collection: Collection | null
  +telegramChatId?: string
  +setId(id: string): void
  +isAdmin(): boolean
  +getFullName(): string
  +recalculateReputationFrom(ratings: readonly Rating[]): number
}

interface CollectionItem {
  +sticker: Sticker
  +quantity: number
}

class Collection {
  +items: CollectionItem[]
  +missingStickers: Sticker[]
  +getItemByStickerId(stickerId: number): CollectionItem | undefined
  +addItem(collectionItem: CollectionItem): void
  +updateItemQuantity(stickerId: number, newQuantity: number): void
  +removeItem(stickerId: number): void
  +isMissing(stickerId: number): boolean
  +addMissing(sticker: Sticker): void
  +removeMissing(stickerId: number): void
}

' ============================================================
' Reputation
' ============================================================

class Rating {
  +id: string
  +reviewer: User
  +reviewee: User
  +score: number
  +comment: string
  +createdAt: Date
  +setId(id: string): void
  +isFor(user: User): boolean
  -ensureNotSelfRating(): void
}

' ============================================================
' Offers
' ============================================================

class Offer {
  +id: string
  +offerer: User
  +state: OfferState
  +createdAt: Date
  +offered: CollectionItem[]
  +setId(id: string): void
  +isPending(): boolean
  +isByUser(user: User): boolean
  +approve(): void
  +reject(): void
  +cancelBy(user: User): void
  +transitionTo(nextState: OfferState): void
  +getOfferedQuantity(): number
}

' ============================================================
' Posts (DirectTrade vs Auction)
' ============================================================

abstract class Post {
  +id: string
  +owner: User
  +sticker: Sticker
  +state: PostState
  +offers: Offer[]
  {abstract} +getType(): PostType
  +setId(id: string): void
  +isOwnedBy(user: User): boolean
  +isActive(): boolean
  +canReceiveOffers(at: Date): boolean
  +addOffer(offer: Offer, at: Date): void
  +getOfferById(offerId: string): Offer | undefined
  +approveOffer(offerId: string, actor: User): Offer
  +rejectOffer(offerId: string, actor: User): Offer
  +cancelOffer(offerId: string, actor: User): Offer
  +changeState(nextState: PostState): void
  +complete(): void
  -ensureOwnerActor(actor: User): void
  -requireOfferById(offerId: string): Offer
  #requireHydratedOffers(): Offer[]
}

class DirectTrade {
  +getType(): PostType
}

class Auction {
  +createdAt: Date
  +endsAt: Date
  +minimumRequirement: number
  +getType(): PostType
  +hasEnded(at: Date): boolean
  +canReceiveOffers(at: Date): boolean
  +lastOffer(): Offer | null
  +addOffer(offer: Offer): void
}

' ============================================================
' Notifications
' ============================================================

class Notification {
  +id: string
  +userId: string
  +type: NotificationType
  +message: string
  +read: boolean
  +payload: Record<string, unknown>
  +createdAt: Date
  +setId(id: string): void
}

interface NotificationChannel {
  +send(notification: Notification): Promise<void>
}

class InAppChannel {
  +send(notification: Notification): Promise<void>
}

class TelegramChannel {
  +send(notification: Notification): Promise<void>
}

' ============================================================
' Relaciones
' ============================================================

' Catálogo
NationalTeam <-- Player
Club <-- Player

Player <-- Sticker
Category <-- Sticker
StickerState <-- Category
StickerType <-- Category

' Colección
Sticker <-- Collection
CollectionItem <-- Collection
Sticker <-- CollectionItem

' Usuario
UserRole <-- User
Collection <-- User

' Reputación
User <-- Rating

' Ofertas
User <-- Offer
CollectionItem <-- Offer
OfferState <-- Offer

' Publicaciones
User <-- Post
Sticker <-- Post
Offer <-- Post
PostState <-- Post
PostType <-- Post

Post <|-- DirectTrade
Post <|-- Auction

' Notificaciones
NotificationType <-- Notification
NotificationChannel <|.. InAppChannel
NotificationChannel <|.. TelegramChannel
Notification <-- InAppChannel
Notification <-- TelegramChannel

@enduml
